JavaFX works now, time to finish A7

--- a/Second Year/First Semester/Java/assignment7/Makefile
+++ b/Second Year/First Semester/Java/assignment7/Makefile
@@ -1,7 +1,3 @@
-build:
-	@mvn package
-	@echo "Project built."
-
 clean:
 	@rm -rf log*.txt
 	@rm -rf target
@@ -9,4 +5,4 @@ clean:
 
 run:
 	@rm -rf log*.txt
-	@java -cp target/Interpreter-1.0-SNAPSHOT.jar com.Ghost.Interpreter.View.Entry
+	@mvn clean javafx:run
