Remove output, oops

--- a/3rd Year/Paralel Programming/lab1/Makefile
+++ b/3rd Year/Paralel Programming/lab1/Makefile
@@ -5,6 +5,7 @@ TARGET = lab1
 MAKEFLAGS += --no-print-directory
 
 c:
+	@cmake -E remove_directory .cache
 	@cmake -E remove_directory build
 	@cmake -E remove_directory out
 
