--- a/3rd Year/Paralel Programming/lab1/Makefile
+++ b/3rd Year/Paralel Programming/lab1/Makefile
@@ -5,14 +5,34 @@ TARGET = lab1
 MAKEFLAGS += --no-print-directory
 
 c:
-	@cmake -E remove_directory .cache
-	@cmake -E remove_directory build
-	@cmake -E remove_directory out
+	@cmake -E remove_directory .cache/
+	@cmake -E remove_directory build/
+	@cmake -E remove_directory out/
 
-b:
-	@cmake -B build -S . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_INSTALL_PREFIX=./out
+bud:
+	@cmake -B build -S . --preset unix-debug
 	@cmake --build build/
 	@cmake --install build/
 
-r: b
+bur:
+	@cmake -B build -S . --preset unix-release
+	@cmake --build build/
+	@cmake --install build/
+
+ru: bur
 	@./out/bin/${TARGET}
+
+bwd:
+	@cmake -B build -S . --preset windows-debug
+	@cmake --build build/
+	@cmake --install build/
+
+bwr:
+	@cmake -B build -S . --preset windows-release
+	@cmake --build build/
+	@cmake --install build/
+
+rw: bwr
+	@./out/bin/${TARGET}
+
+r: rw
